# dispatch-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  prd.json  progress.txt
.github/workflows/: ci.yml  release.yml
examples/: dispatch-comms.md  watch-files.sh  workflow.sh
examples/.claude/: settings.json
examples/agent-counsel/: CLAUDE.md  README.md  chair.prompt.md  counselor-bezos.prompt.md  counselor-gates.prompt.md  counselor-jobs.prompt.md  counselor-musk.prompt.md  dispatch-comms.md  main.prompt.md  setup.sh
examples/review-agent/: README.md  dispatch-comms.md  reviewer.prompt.md  setup.sh  writer.prompt.md
src/: broker.rs  cli.rs  client.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  protocol.rs
src/adapter/: claude.rs  codex.rs  command.rs  mod.rs
src/backend/: comms.md  local.rs  mod.rs  monitor.html  monitor.rs  orchestrator.rs
src/hooks/: claude.rs  codex.rs  mod.rs
tests/: cli.rs  cli_init.rs
