[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
description = "Multi-agent, multi-vendor orchestration system"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
dirs = "6"

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3.27.0"
