[package]
name = "dispatch"
version = "0.4.1"
edition = "2021"
description = "Multi-agent, multi-vendor orchestration system"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
dirs = "6"
async-trait = "0.1.89"
axum = "0.8"
futures-util = "0.3"
libc = "0.2"
open = "5.3.3"

[profile.release]
strip = true
lto = true

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
